--- a/src/404.md
+++ b/src/404.md
@@ -4,6 +4,10 @@ layout: layouts/base.vto
 url: /404.html
 ---
 
+<div class='error-banner'>
+  <div class='error-404'></div>
+
 # Content not found.
 
 Go [home](/).
+</div>
