feat: full remove css in favour of tailwind classes

--- a/src/404.md
+++ b/src/404.md
@@ -4,10 +4,12 @@ layout: layouts/base.vto
 url: /404.html
 ---
 
-<div class='error-banner'>
-  <div class='error-404'></div>
+<div class="z-[1] relative text-center transform-gpu">
+  <div class="error-404-4 inline-block relative bg-no-repeat w-[160px] h-[112px] ml-[-90px] pl-[160px] mt-[112px] mb-8 bg-top bg-left animate-[0.5s_ease-in-out_fade-slide-left]"></div>
+  <div class="error-404-0 inline-block relative bg-no-repeat w-[160px] h-[112px] ml-[-90px] top-[-77.24px] z-[-1] animate-[1s_ease-in-out_fade-slide-left]"></div>
+  <div class="error-404-4 inline-block relative bg-no-repeat w-[160px] h-[112px] ml-[-90px] top-[-115.86px] z-[-10] animate-[1.5s_ease-in-out_fade-slide-left]"></div>
 
-# Content not found.
+## Content not found.
 
 Go [home](/).
 
